--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.14.1",
     "later": "^1.2.0",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "morgan": "^1.7.0",
     "mysql": "^2.13.0",
     "node-schedule": "^1.2.1",
