--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@types/moment": "^2.13.0",
     "angular2-csv": "^0.2.1",
+    "angular2-moment": "^1.7.0",
     "body-parser": "^1.16.0",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
